--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ body {
     align-items: end;
     border-radius: 16px;
     box-shadow: 0px 10px 5px #9b9b9e;
+    margin-top: 50px;
 }
 
 .call-title {
