--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
 .login {
     height: 40px;
     background-color: #00f0ff;
+    color: black;
     margin-inline: 30px;
     padding: 10px;
     border-radius: 24px;
@@ -247,4 +248,5 @@ body {
 
 a {
     color: #b0bec5;
+    text-decoration: none;
 }
