Add header content and style to remaining pages
Add links to and from all pages in header links.

Add temporary 'under construction' message

--- a/css/about-style.css
+++ b/css/about-style.css
@@ -48,3 +48,18 @@ a {
     text-decoration: none;
     color: #b0bec5;
 }
+
+/* Temporary Error */
+
+h1 {
+    padding: 50px;
+    font-size: 48px;
+    text-align: center;
+}
+
+p {
+    font-size: 32px;
+    text-align: center;
+}
+
+/* Temporary Error */
