--- a/css/contact-style.css
+++ b/css/contact-style.css
@@ -52,12 +52,16 @@ a {
 /* Temporary Error */
 
 h1 {
+    display: flex;
+    justify-content: center;
     padding: 50px;
     font-size: 48px;
     text-align: center;
 }
 
 p {
+    display: flex;
+    justify-content: center;
     font-size: 32px;
     text-align: center;
 }
