--- a/css/about-style.css
+++ b/css/about-style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
@@ -41,7 +42,10 @@ body {
     padding: 10px;
     border-radius: 24px;
     border: 0;
-    flex-shrink: 0;
+    font-size: 14px;
+    box-sizing: border-box;
+    
+    
 }
 
 a {
