--- a/css/pricing-style.css
+++ b/css/pricing-style.css
@@ -41,7 +41,10 @@ body {
     padding: 10px;
     border-radius: 24px;
     border: 0;
-    flex-shrink: 0;
+    font-size: 14px;
+    box-sizing: border-box;
+    
+    
 }
 
 a {
