--- a/css/about-style.css
+++ b/css/about-style.css
@@ -55,7 +55,7 @@ a {
 
 /* Temporary Error */
 
-h1 {
+/* h1 {
     display: flex;
     justify-content: center;
     padding: 50px;
@@ -68,6 +68,239 @@ p {
     justify-content: center;
     font-size: 32px;
     text-align: center;
-}
+} */
 
 /* Temporary Error */
+
+
+.about-header {
+    display: flex;
+    flex-direction: column;
+    background-image: url(../images/about-header.png);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 500px;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    flex:1;
+    padding-top: 50px;
+
+}
+
+.about-title {
+    font-size: 48px;
+    color: #fff;
+    margin-right: 200px;
+    border-bottom: 4px solid #00f0ff;
+    padding-right: 600px;
+    padding-left: 200px;
+}
+
+.facts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+    padding-block: 100px;
+}
+
+.pars {
+    display: flex;
+    gap: 300px;
+    flex-wrap: wrap;
+    align-items: center;
+    
+}
+
+.fact-par {
+    display: flex;
+    width: 600px;
+    font-size: 24px;
+    border-block: 4px solid #0d1b2a;
+    padding-inline: 100px;
+    height: 200px;
+    align-items: center;
+}
+
+.info-section {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    padding-bottom: 100px;
+}
+
+.info-header {
+    font-size: 32px;
+    text-align: center;
+    background-color: #0d1b2a;
+    color: white;
+    padding-block: 20px
+}
+
+.info-text {
+    display: flex;
+    flex-direction: column;
+    padding-inline: 300px;
+    gap: 20px
+}
+
+.info-par {
+    font-size: 18px;
+}
+
+.info-question {
+    font-size: 18px;
+}
+
+.vision-section {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+    gap: 20px;
+}
+
+.vision-header {
+    font-size: 32px;
+    text-align: center;
+    padding-block: 20px;
+}
+
+.vis-par {
+    font-size: 18px;
+    width: 600px;
+    text-align: center;
+    align-self: center;
+}
+
+.method-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.method-header {
+    text-align: center;
+    font-size: 32px;
+    background-color: #0d1b2a;
+    padding: 20px;
+    color: white;
+}
+
+.method-cards {
+    display: flex;
+    justify-content: space-evenly;
+    padding-block: 100px;
+    gap: 100px;
+    flex-wrap: wrap;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    gap: 50px;
+    border: 4px solid black;
+    padding-top: 20px;
+    height: 400px;
+    border-radius: 12px;
+    background-color: #0d1b2a;
+    box-shadow: 0px 10px 10px 5px #6c7479;
+    flex-shrink: 0;
+}
+
+.card img {
+    background-color: #00f0ff;
+    padding: 20px;
+    border-radius: 48px;
+}
+
+.met-par {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    text-align: center;
+    border-top: 4px solid black;
+    background-color: #b0bec5;
+    height: 200px;
+}
+
+.conclusion {
+    display: flex;
+    justify-content: center;
+    justify-self: center;
+    align-items: center;
+    gap: 50px;
+    padding-inline: 100px;
+    padding-block: 50px;
+    width: 1000px;
+    border: 4px solid black;
+    margin-bottom: 100px;
+    border-radius: 24px;
+}
+
+.who-section {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    /* align-items: center; */
+}
+
+.who-header {
+    font-size: 24px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.who-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 18px;
+
+}
+
+.why-section {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    background-color: #0d1b2a;
+    padding: 50px;
+    border-radius: 24px;
+}
+
+.why-header {
+    font-size: 24px;
+    color: white;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.why-par {
+    font-size: 18px;
+    color: white;
+}
+
+.footer {
+    background-color: #0d1b2a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.copyright {
+    color: white;
+    font-size: 12px;
+    padding: 10px;
+}
+
+.bottom-links {
+    color: white;
+    display: flex;
+    gap: 15px;
+    list-style-type: none;
+    text-decoration: none;
+    padding: 15px;
+}
