--- a/css/about-style.css
+++ b/css/about-style.css
@@ -84,8 +84,9 @@ p {
     align-items: center;
     justify-content: center;
     gap: 100px;
-    flex: 0;
-    padding-top: 50px;
+    flex: 1 1 auto;
+    padding-top: 100px;
+
 
 }
 
@@ -104,6 +105,7 @@ p {
     padding-right: 600px;
     padding-left: 200px;
     margin-bottom: 20px;
+    flex: 1 1 auto;
 }
 
 .facts {
@@ -112,7 +114,7 @@ p {
     align-items: center;
     gap: 100px;
     padding-block: 100px;
-    margin-inline: 150px;
+    margin-inline: 225px;
     flex-wrap: wrap;
 }
 
